crates/math-core/tests/snapshots/wiki_test__wiki185.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: x y z
---
<math>
    <mi>x</mi>
    <mi>y</mi>
    <mi>z</mi>
</math>
