crates/math-core/tests/snapshots/wiki_test__wiki186.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\Iota \\Kappa \\Lambda \\Mu \\Nu \\Xi \\Omicron \\Pi"
---
<math>
    <mrow><mspace/><mi mathvariant="normal">Ι</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Κ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Λ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Μ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Ν</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Ξ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Ο</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Π</mi></mrow>
</math>
