crates/math-core/tests/snapshots/wiki_test__wiki187.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\text{if} n \\text{is even}"
---
<math>
    <mtext>if</mtext>
    <mi>n</mi>
    <mtext>is even</mtext>
</math>
